# datasov2

./: ARCHITECTURE.md  DEMO_ENVIRONMENT_REPORT.md  INTEGRATION_TEST_REPORT.md  README.md  demo-data.json  integration-test.js
DataSovMobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
corda-component/: README.md  build.gradle  gradle.properties  settings.gradle
corda-component/clients/: build.gradle
corda-component/contracts/: build.gradle
corda-component/workflows/: build.gradle
frontend/: .env.example  .gitignore  README.md  env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx  setupTests.ts
integration-layer/: .env.example  INTEGRATION_SUMMARY.md  Makefile  README.md  env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
integration-layer/examples/: basic-usage.ts
integration-layer/src/: index.ts  simple-api.ts
integration-layer/tests/: integration.test.ts  (+1 more)
solana-component/: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package.json  tsconfig.json
solana-component/examples/: basic-usage.ts
solana-component/programs/datasov-identity/: Cargo.toml
solana-component/programs/datasov-identity/src/: lib.rs
solana-component/programs/datasov-solana/: Cargo.toml
solana-component/programs/datasov-solana/src/: lib.rs
solana-component/src/: index.ts
solana-component/src/idl/: datasov_solana.json
solana-component/src/types/: datasov_solana.ts
solana-component/tests/: datasov-solana.ts
(+49 files in other folders)
