[workspace]
members = [
    "programs/datasov-solana",
    "programs/datasov-identity"
]

[package]
name = "datasov-workspace"
version = "0.1.0"
description = "DataSov Solana Component - Data Marketplace and Identity Management"
edition = "2021"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0"

[profile.release]
overflow-checks = true
