[package]
name = "datasov-solana"
version = "0.1.0"
description = "DataSov Data Marketplace Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "datasov_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
datasov-identity = { path = "../datasov-identity", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "~1.16.0"
